<resources>
    <string name="app_name">CS4518-project</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="basketball_counter">BasketBall Counter</string>
    <string name="_3_points">+3 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="free_throw">Free Throw</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="_0">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_display">DisplayActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="history">History</string>
    <string name="new_game">New Game</string>
    <string name="score_page">Score Page</string>
</resources>